--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ plugins {
 
 node {
 	download = true
-	version = "9.11.2" // Update to node.js version 9.11.2 from 9.11.1
-	npmVersion = "5.6.0"
+	version = "14.21.3" // Update 
+	npmVersion = "6.14.18"
 }
 
 //declare a build task
