--- a/deployment.yaml
+++ b/deployment.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
      containers:
       - name: train-schedule
-        image: sk260/edureka-project2:$BUILD_NUMBER
+        image: sk260/edureka-project2:${BUILD_NUMBER}
         imagePullPolicy: Always 
         ports: 
          - containerPort: 8080
